--- a/client/template/upload.html
+++ b/client/template/upload.html
@@ -1,3 +1,59 @@
 <div>
     <h1>Upload page</h1>
+    Width:
+    <input type="number" name="widthImage" ng-model="widthImage" size="31" required>
+    <i ng-show="myForm.widthImage.$error.required">pixel *required</i>
+    Height:
+    <input type="number" name="heightImage" ng-model="heightImage" size="31" required>
+    <i ng-show="myForm.widthImage.$error.required">pixel *required</i>
+
+
+    <div>
+        <form name="myForm">
+            <fieldset>
+                <legend>Upload on form submit</legend>
+                Username:
+                <input type="text"
+                       name="userName"
+                       ng-model="username"
+                       size="39"
+                       required="">
+                <i ng-show="myForm.userName.$error.required">
+                    *required
+                </i>
+                <br>
+                Profile Picture:
+                <input type="file"
+                       ngf-select=""
+                       ng-model="picFile"
+                       name="file"
+                       ngf-accept="'image/*'"
+                       required="">
+                <i ng-show="myForm.file.$error.required">
+                    *required
+                </i>
+                <br>
+                <button ng-disabled="!myForm.$valid"
+                        ng-click="uploadPic(picFile)">
+                    Submit
+                </button>
+                <img ngf-src="picFile"
+                     class="thumb"
+                     id="workImage">
+              <span class="progress"
+                    ng-show="picFile.progress >= 0">
+                  <div style="width:{{picFile.progress}}%"
+                       ng-bind="picFile.progress + '%'"
+                       class="ng-binding">
+                  </div>
+              </span>
+                <span ng-show="picFile.result">
+                    Upload Successful
+                </span>
+            </fieldset>
+        </form>
+
+    </div>
+
+
 </div>
