automatically paining color map for imagemagick

--- a/client/template/home.html
+++ b/client/template/home.html
@@ -1,4 +1,5 @@
 <div>
     <h1>Home page</h1>
     <a ui-sref="app.uploadImage" class="button">Upload page</a>
+    <a ui-sref="app.color" class="button">Color</a>
 </div>
