Colormap in imagemagick working very bed there for I did: convert palette of string in rgb format and save in json change number of color in image using -colors comand in imagemagick. User can change number of color get all color in image. find in palette the most similar color and replace it.

--- a/client/template/upload.html
+++ b/client/template/upload.html
@@ -41,6 +41,7 @@
                         class="col-xs-12 col-sm-3"
                         ng-show="formShow">
                 </slider>
+                <input type="number" ng-model="numberOfColor">
                 <i ng-show="myForm.heightImage.$error.required">*required</i>
                 Profile Picture:
                 <input type="file"
