refactoring server side

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -2,5 +2,5 @@
 @import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css");
 @import "index";
 @import "upload";
-
+@import "slider";
 
