--- a/client/scss/_upload.scss
+++ b/client/scss/_upload.scss
@@ -1,5 +1,8 @@
-$mainColor: #924acc;
-$secondColor: #d193dc;
+$mainColor: #009688;
+$lightMainColor: #d1b1ff;
+$darkColor: #8a00c6;
+$secondColor: #6ee4ff;
+$lightSecondColor: #dafaff;
 
 
 form .progress {
