--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,5 +1,15 @@
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css");
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css");
+@import url("/public/lib/angular-material.min.css");
+.row-header {
+  margin: 0 auto;
+  padding: 0 0;
+}
+
+.row-content {
+  margin: 0 auto;
+  padding: 50px 0;
+  min-height: 400px;
+}
+
 form .progress {
   line-height: 15px;
 }
@@ -12,7 +22,7 @@ form .progress {
 
 .progress div {
   font-size: smaller;
-  background: #924acc;
+  background: #009688;
   width: 0;
 }
 
@@ -54,7 +64,7 @@ form .progress {
   border-width: 0 10px 10px 10px;
   width: 0;
   height: 0;
-  border-bottom-color: #924acc;
+  border-bottom-color: #009688;
   margin-top: 0;
 }
 
@@ -107,7 +117,7 @@ form .progress {
   border-width: 10px 0 10px 10px;
   width: 1px;
   height: 1px;
-  border-left-color: #924acc;
+  border-left-color: #009688;
   margin-left: 0;
 }
 
@@ -120,17 +130,17 @@ form .progress {
 }
 
 .slider.slider-disabled .slider-handle {
-  background-image: -webkit-linear-gradient(top, #dfdfdf 0%, #d193dc 100%);
-  background-image: -o-linear-gradient(top, #dfdfdf 0%, #d193dc 100%);
-  background-image: linear-gradient(to bottom, #dfdfdf 0%, #d193dc 100%);
+  background-image: -webkit-linear-gradient(top, #dfdfdf 0%, #6ee4ff 100%);
+  background-image: -o-linear-gradient(top, #dfdfdf 0%, #6ee4ff 100%);
+  background-image: linear-gradient(to bottom, #dfdfdf 0%, #6ee4ff 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdfdfdf', endColorstr='#ffbebebe', GradientType=0);
 }
 
 .slider.slider-disabled .slider-track {
-  background-image: -webkit-linear-gradient(top, #d193dc 0%, #e9e9e9 100%);
-  background-image: -o-linear-gradient(top, #d193dc 0%, #e9e9e9 100%);
-  background-image: linear-gradient(to bottom, #d193dc 0%, #e9e9e9 100%);
+  background-image: -webkit-linear-gradient(top, #6ee4ff 0%, #e9e9e9 100%);
+  background-image: -o-linear-gradient(top, #6ee4ff 0%, #e9e9e9 100%);
+  background-image: linear-gradient(to bottom, #6ee4ff 0%, #e9e9e9 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe5e5e5', endColorstr='#ffe9e9e9', GradientType=0);
   cursor: not-allowed;
@@ -168,7 +178,7 @@ form .progress {
 
 .slider-selection {
   position: absolute;
-  background-color: #d193dc;
+  background-color: #6ee4ff;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#fff5f5f5', GradientType=0);
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
@@ -201,10 +211,10 @@ form .progress {
   position: absolute;
   width: 20px;
   height: 20px;
-  background-color: #924acc;
-  background-image: -webkit-linear-gradient(top, #924acc 0%, #924acc 100%);
-  background-image: -o-linear-gradient(top, #924acc 0%, #924acc 100%);
-  background-image: linear-gradient(to bottom, #924acc 0%, #924acc 100%);
+  background-color: #009688;
+  background-image: -webkit-linear-gradient(top, #009688 0%, #009688 100%);
+  background-image: -o-linear-gradient(top, #009688 0%, #009688 100%);
+  background-image: linear-gradient(to bottom, #009688 0%, #009688 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff149bdf', endColorstr='#ff0480be', GradientType=0);
   filter: none;
@@ -277,6 +287,29 @@ form .progress {
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff89cdef', endColorstr='#ff81bfde', GradientType=0);
   opacity: 1;
+}
+
+#logo {
+  text-decoration: none;
+  padding-left: 15px;
+}
+
+#logo-p {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 30px;
+  color: #69F0AE;
+}
+
+#logo-icon {
+  display: inline-block;
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+}
+
+.full-button {
+  width: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
