--- a/client/scss/_index.scss
+++ b/client/scss/_index.scss
@@ -1,1 +1,11 @@
 $baseURL: "http://localhost:3000";
+
+.row-header {
+  margin: 0 auto;
+  padding: 0 0;
+}
+.row-content {
+  margin: 0 auto;
+  padding: 50px 0;
+  min-height: 400px;
+}
