--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,6 +1,7 @@
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css");
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css");
+@import url("/public/lib/angular-material.min.css");
+@import "config";
 @import "index";
 @import "upload";
 @import "slider";
+@import "navigation";
 
