--- a/client/scss/_upload.scss
+++ b/client/scss/_upload.scss
@@ -1,16 +1,30 @@
-#p-size-image {
-   display: inline-block;
-  vertical-align: middle;
- }
+.invalid {
+  color: red;
+}
 
-#input-width {
+.input-container {
+  width: 100%;
+  margin: 8px 0;
+}
+
+#width-label {
+  color: black;
+  font-size: 16px;
+  vertical-align: middle;
+}
+
+#p-size-image {
   display: inline-block;
+  margin: 6px 0 0 0;
+}
+
+#input-numberOfColor {
+  width: 60px;
 }
 
 form .progress {
   line-height: 15px;
 }
-
 
 .progress {
   display: inline-block;
@@ -24,11 +38,41 @@ form .progress {
   width: 0;
 }
 
+.preview-block {
+  display: block;
+  border: 2px solid $primaryColor;
+  max-height: 100vh;
+}
 
+.button-icon {
+  vertical-align: middle;
+}
 
+.imagePreview {
+  max-height: -webkit-calc(90vh - 64px);
+  max-height: -moz-calc(90vh - 64px);
+  max-height: calc(90vh - 64px);
+  max-width: 100%;
+}
 
+.image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: -webkit-calc(90vh - 64px);
+  max-height: -moz-calc(90vh - 64px);
+  max-height: calc(90vh - 64px);
+  max-width: 100%;
+  overflow: auto;
+  //overflow-x: auto;
+  //overflow-y: auto;
+}
 
-
+.convert-button {
+  @media screen and (max-width: $mediumScreen) {
+    width: 100%;
+  }
+}
 
 
 
