--- a/client/scss/config.scss
+++ b/client/scss/config.scss
@@ -1,6 +1,11 @@
+$baseURL: "http://localhost:3000";
+
+$primaryColor: #7E57C2;
 $accentColor: #69F0AE;
+$lightPurple: #EDE7F6;
 
 $h1FontSize: 30px;
 $h2FontSize: 24px;
 
 $smallScreen: 600px;
+$mediumScreen: 960px;
