--- a/client/template/upload.html
+++ b/client/template/upload.html
@@ -1,99 +1,194 @@
+<div layout="column"
+     flex="100">
+    <h1 class="header"
+        flex="100">
+        Upload page
+    </h1>
+
+    <p flex="100">Let's start. In order to get color schema for your image, upload file and select options: how many
+        color do you want to have and image which do you prefer</p>
+</div>
+
 <div layout="row"
-     layout-wrap>
-    <h1 id="header">Upload page</h1>
+     layout-wrap
+     flex="100">
+    <form name="uploadForm"
+          flex="100"
+          ng-show="!imageResult">
 
+        <md-input-container ng-if="formShow"
+                            layout-gt-sm="row"
+                            layout-sm="column"
+                            layout-margin
+                            class="input-container">
 
-    <div>
-        <form name="myForm">
-            <fieldset>
-                <legend>Upload on form submit</legend>
+            <label ng-hide="$mdMedia('sm')||$mdMedia('xs')">Width x Height:</label>
 
-                <md-input-container ng-if="formShow"
-                                    layout="row"
-                                    flex="100">
-                    <label flex="15">
-                        Width x Height:
-                    </label>
-                    <md-slider min="5"
-                               flex="70"
-                               max="{{imageParams.maxWidth}}"
-                               ng-model="imageParams.widthImage"
-                               step="5"
-                               id="width-slider"
-                               class="md-primary"
-                               aria-label="5"
-                               ng-change="widthChange(imageParams.widthImage)">
-                    </md-slider>
-                    <div flex="15">
-                        <input type="number"
-                               ng-model="imageParams.widthImage"
-                               ng-change="widthChange(imageParams.widthImage)"
-                               flex="50"
-                               required
-                               id="input-width">
+            <div ng-show="$mdMedia('sm')||$mdMedia('xs')"
+                 flex-sm="100">
+                <p>Width x Height: {{imageParams.widthImage}} x {{imageParams.heightImage}} pixels</p>
+            </div>
+            <md-slider flex-gt-sm="80"
+                       flex-sm="100"
+                       min="5"
+                       max="{{imageParams.maxWidth}}"
+                       ng-model="imageParams.widthImage"
+                       step="5"
+                       id="width-slider"
+                       class="md-primary"
+                       aria-label="5"
+                       ng-change="widthChange(imageParams.widthImage)">
+            </md-slider>
+            <div ng-hide="$mdMedia('sm')||$mdMedia('xs')">
+                <input type="number"
+                       ng-model="imageParams.widthImage"
+                       ng-change="widthChange(imageParams.widthImage)"
+                       required
+                       id="input-width">
 
-                        <p flex="50"
-                           id="p-size-image">
-                            x {{imageParams.heightImage}} pixels
-                        </p>
-                    </div>
-                </md-input-container>
+                <p id="p-size-image">
+                    x {{imageParams.heightImage}} pixels
+                </p>
+            </div>
+        </md-input-container>
 
-                <md-input-container ng-show="formShow"
-                                    layout="row"
-                                    flex="100">
-                    <label flex="15">
-                        Number of color:
-                    </label>
-                    <md-slider min="5"
-                               flex="70"
-                               max="200"
-                               ng-model="numberOfColor"
-                               step="5"
-                               id="color-slider"
-                               class="md-primary"
-                               aria-label="5">
-                    </md-slider>
-                    <input type="number"
-                           ng-model="numberOfColor"
-                           flex="15"
-                           required>
-                </md-input-container>
-                Profile Picture:
-                <input type="file"
-                       ngf-select=""
-                       ng-model="picFile"
-                       name="file"
-                       ngf-accept="'image/*'"
-                       required="">
-                <i ng-show="myForm.file.$error.required">
-                    *required
-                </i>
-                <br>
-                <button ng-disabled="!myForm.$valid"
-                        ng-click="uploadPic(picFile)">
-                    Submit
-                </button>
+        <md-input-container ng-show="formShow"
+                            layout-gt-sm="row"
+                            layout-sm="column"
+                            layout-margin
+                            class="input-container">
+            <div ng-show="$mdMedia('sm')||$mdMedia('xs')"
+                 flex-sm="100">
+                <p>Number of color: {{numberOfColor}}</p>
+            </div>
+            <label ng-hide="$mdMedia('sm')||$mdMedia('xs')">
+                Number of color:
+            </label>
+            <md-slider min="5"
+                       flex-gt-sm="80"
+                       flex-sm="100"
+                       max="200"
+                       ng-model="numberOfColor"
+                       step="5"
+                       id="color-slider"
+                       class="md-primary"
+                       aria-label="5">
+            </md-slider>
+            <input ng-hide="$mdMedia('sm')||$mdMedia('xs')"
+                   type="number"
+                   ng-model="numberOfColor"
+                   flex="15"
+                   ng-change="numberChange(numberOfColor)"
+                   required>
+        </md-input-container>
+        <div class="preview-block"
+             ng-show="formShow">
+            <md-toolbar layout-gt-sm="row"
+                        layout-sm="column"
+                        class="md-primary md-hue-2"
+                        flex="100">
+                <div layout-align="start center"
+                     layout="row"
+                     flex>
+                    <md-button ng-click="fit()"
+                               ng-disabled="picFile.progress >= 0">
+                        FIT
+                    </md-button>
+                    <md-button ng-click="zoomIn()"
+                               ng-disabled="picFile.progress >= 0">
+                        <i class="material-icons button-icon">zoom_in</i>
+                    </md-button>
+                    <md-button ng-click="zoomOut()"
+                               ng-disabled="picFile.progress >= 0">
+                        <i class="material-icons button-icon">zoom_out</i>
+                    </md-button>
+                </div>
+                <div layout-align="center center"
+                     layout="row"
+                     flex>
+                    <span class="progress"
+                          ng-show="picFile.progress >= 0 && !imageResult">
+                        <div style="width:{{picFile.progress}}%"
+                             ng-bind="picFile.progress + '%'"
+                             class="ng-binding">
+                        </div>
+                    </span>
+                    <!--span show when upload hove been starting and response don't get yet-->
+                </div>
+                <div layout-align="end center"
+                     layout="row"
+                     flex>
+                    <md-button class="md-raised md-primary convert-button"
+                               ng-disabled="!uploadForm.$valid"
+                               ng-click="uploadPic(picFile)">
+                        Convert
+                    </md-button>
+                </div>
+            </md-toolbar>
+            <div class="image-container">
                 <img ngf-src="picFile"
-                     class="thumb"
+                     class="thumb imagePreview"
                      id="picFile"
                      image-processing
-                     image-on-load="imageLoaded(result)">
-              <span class="progress"
-                    ng-show="picFile.progress >= 0">
-                  <div style="width:{{picFile.progress}}%"
-                       ng-bind="picFile.progress + '%'"
-                       class="ng-binding">
-                  </div>
-              </span>
-                <span ng-show="picFile.result">
-                    Upload Successful
-                </span>
-                <img ng-if="imageResult" ng-src="/public/images/temp_convert/{{imageResultUrl}}">
-            </fieldset>
-        </form>
+                     image-on-load="imageLoaded(result)"
+                     zoom-in
+                     zoom-out
+                     fit>
+            </div>
+        </div>
+        <div ng-class="{'invalid': uploadForm.file.$error.maxSize}"
+             ng-hide="formShow">
+            <input type="file"
+                   ngf-select=""
+                   ng-model="picFile"
+                   name="file"
+                   ngf-accept="'image/*'"
+                   ngf-max-size="2MB"
+                   required="">
+            <span ng-show="uploadForm.file.$error.maxSize">
+                More then 2 MB. Please select other file
+            </span>
+        </div>
 
+    </form>
+    <div class="preview-block"
+         ng-show="imageResult">
+        <md-toolbar layout-gt-sm="row"
+                    layout-sm="column"
+                    class="md-primary md-hue-2"
+                    flex="100">
+            <div layout-align="start center"
+                 layout="row"
+                 flex>
+                <md-button ng-click="fit()">
+                    FIT
+                </md-button>
+                <md-button ng-click="zoomIn()">
+                    <i class="material-icons button-icon">zoom_in</i>
+                </md-button>
+                <md-button ng-click="zoomOut()">
+                    <i class="material-icons button-icon">zoom_out</i>
+                </md-button>
+            </div>
+            <div layout-align="end center"
+                 layout="row"
+                 flex>
+                <md-button class="md-raised md-primary convert-button"
+                           ng-disabled="!uploadForm.$valid"
+                           ng-click=""
+                           id="">
+                    Save
+                </md-button>
+            </div>
+        </md-toolbar>
+        <div class="image-container">
+            <img ng-if="imageResult"
+                 ng-src="/public/images/temp_convert/{{imageResultUrl}}"
+                 class="thumb imagePreview"
+                 zoom-in
+                 zoom-out
+                 fit>
+        </div>
     </div>
-
 
 </div>
