--- a/client/css/main.css
+++ b/client/css/main.css
@@ -13,21 +13,6 @@
   margin: 8px 0;
 }
 
-#width-label {
-  color: black;
-  font-size: 16px;
-  vertical-align: middle;
-}
-
-#p-size-image {
-  display: inline-block;
-  margin: 6px 0 0 0;
-}
-
-#input-numberOfColor {
-  width: 60px;
-}
-
 form .progress {
   line-height: 15px;
 }
@@ -46,8 +31,7 @@ form .progress {
 
 .preview-block {
   display: block;
-  border: 2px solid #7E57C2;
-  max-height: 100vh;
+  max-height: 90vh;
 }
 
 .button-icon {
@@ -55,21 +39,13 @@ form .progress {
 }
 
 .imagePreview {
-  max-height: -webkit-calc(90vh - 64px);
-  max-height: -moz-calc(90vh - 64px);
-  max-height: calc(90vh - 64px);
-  max-width: 100%;
+  height: 99%;
+  image-rendering: pixelated;
 }
 
-.image-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-height: -webkit-calc(90vh - 64px);
-  max-height: -moz-calc(90vh - 64px);
-  max-height: calc(90vh - 64px);
-  max-width: 100%;
+.preview-container {
   overflow: auto;
+  height: 400px;
 }
 
 @media screen and (max-width: 960px) {
