--- a/client/scss/_upload.scss
+++ b/client/scss/_upload.scss
@@ -7,21 +7,6 @@
   margin: 8px 0;
 }
 
-#width-label {
-  color: black;
-  font-size: 16px;
-  vertical-align: middle;
-}
-
-#p-size-image {
-  display: inline-block;
-  margin: 6px 0 0 0;
-}
-
-#input-numberOfColor {
-  width: 60px;
-}
-
 form .progress {
   line-height: 15px;
 }
@@ -40,8 +25,7 @@ form .progress {
 
 .preview-block {
   display: block;
-  border: 2px solid $primaryColor;
-  max-height: 100vh;
+  max-height: 90vh;
 }
 
 .button-icon {
@@ -49,23 +33,24 @@ form .progress {
 }
 
 .imagePreview {
-  max-height: -webkit-calc(90vh - 64px);
-  max-height: -moz-calc(90vh - 64px);
-  max-height: calc(90vh - 64px);
-  max-width: 100%;
+  height: 99%;
+  image-rendering:  pixelated;
 }
 
-.image-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-height: -webkit-calc(90vh - 64px);
-  max-height: -moz-calc(90vh - 64px);
-  max-height: calc(90vh - 64px);
-  max-width: 100%;
+//.image-container {
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//  max-height: -webkit-calc(90vh - 64px);
+//  max-height: -moz-calc(90vh - 64px);
+//  max-height: calc(90vh - 64px);
+//  max-width: 100%;
+//  overflow: auto;
+//}
+//
+.preview-container {
   overflow: auto;
-  //overflow-x: auto;
-  //overflow-y: auto;
+  height: 400px;
 }
 
 .convert-button {
