--- a/client/template/upload.html
+++ b/client/template/upload.html
@@ -13,19 +13,90 @@
      layout-wrap
      flex="100">
     <form name="uploadForm"
-          flex="100"
-          ng-show="!imageResult">
+          flex="100">
+
+        <div ng-class="{'invalid': uploadForm.file.$error.maxSize}"
+             ng-hide="formShow">
+            <md-button class="md-button md-raised"
+                       ngf-select
+                       ng-model="picFile"
+                       name="file"
+                       ngf-accept="'image/*'"
+                       ngf-max-size="2MB"
+                       required="">
+                Choose photo
+            </md-button>
+            <span ng-show="uploadForm.file.$error.maxSize">
+                More then 2 MB. Please select other file
+            </span>
+        </div>
+
+
+        <md-toolbar layout-gt-sm="row"
+                    layout-sm="column"
+                    class="md-primary md-hue-2"
+                    flex="100"
+                    ng-show="formShow">
+            <div layout-align="start center"
+                 layout="row"
+                 flex>
+                <md-button ng-click="fit()"
+                           ng-show="imageResult">
+                    FIT
+                </md-button>
+                <md-button ng-click="zoomIn()"
+                           ng-show="imageResult">
+                    <i class="material-icons button-icon">zoom_in</i>
+                </md-button>
+                <md-button ng-click="zoomOut()"
+                           ng-show="imageResult">
+                    <i class="material-icons button-icon">zoom_out</i>
+                </md-button>
+            </div>
+            <div layout-align="center center"
+                 layout="row"
+                 flex>
+                    <span class="progress"
+                          ng-show="picFile.progress > 0 && !imageResult">
+                        <div style="width:{{picFile.progress}}%"
+                             ng-bind="picFile.progress + '%'"
+                             class="ng-binding">
+                        </div>
+                    </span>
+                <!--span show when upload hove been starting and response don't get yet-->
+            </div>
+            <div layout-align="end center"
+                 layout="row"
+                 flex>
+                <md-button class="md-raised md-primary convert-button"
+                           ng-disabled="!uploadForm.$valid"
+                           ng-click="uploadPic(picFile)"
+                           ng-show="!imageResult">
+                    Convert
+                </md-button>
+                <md-button class="md-raised md-primary"
+                           ng-click=""
+                           ng-show="imageResult"
+                        flex-sm="50">
+                    SAVE
+                </md-button>
+                <md-button class="md-raised md-primary"
+                           ng-click="notLike()"
+                           ng-show="imageResult"
+                           flex-sm="50">
+                    Don't like
+                </md-button>
+            </div>
+        </md-toolbar>
 
         <md-input-container ng-if="formShow"
-                            layout-gt-sm="row"
-                            layout-sm="column"
+                            layout="column"
                             layout-margin
-                            class="input-container">
+                            class="input-container"
+                            ng-show="!imageResult">
+            <label></label>
 
-            <label ng-hide="$mdMedia('sm')||$mdMedia('xs')">Width x Height:</label>
-
-            <div ng-show="$mdMedia('sm')||$mdMedia('xs')"
-                 flex-sm="100">
+            <div flex="100">
                 <p>Width x Height: {{imageParams.widthImage}} x {{imageParams.heightImage}} pixels</p>
             </div>
             <md-slider flex-gt-sm="80"
@@ -39,31 +110,17 @@
                        aria-label="5"
                        ng-change="widthChange(imageParams.widthImage)">
             </md-slider>
-            <div ng-hide="$mdMedia('sm')||$mdMedia('xs')">
-                <input type="number"
-                       ng-model="imageParams.widthImage"
-                       ng-change="widthChange(imageParams.widthImage)"
-                       required
-                       id="input-width">
-
-                <p id="p-size-image">
-                    x {{imageParams.heightImage}} pixels
-                </p>
-            </div>
         </md-input-container>
 
-        <md-input-container ng-show="formShow"
-                            layout-gt-sm="row"
-                            layout-sm="column"
+        <md-input-container ng-if="formShow"
+                            ng-show="!imageResult"
+                            layout="column"
                             layout-margin
                             class="input-container">
-            <div ng-show="$mdMedia('sm')||$mdMedia('xs')"
-                 flex-sm="100">
+            <div flex="100">
                 <p>Number of color: {{numberOfColor}}</p>
             </div>
-            <label ng-hide="$mdMedia('sm')||$mdMedia('xs')">
-                Number of color:
-            </label>
+            <label></label>
             <md-slider min="5"
                        flex-gt-sm="80"
                        flex-sm="100"
@@ -74,121 +131,32 @@
                        class="md-primary"
                        aria-label="5">
             </md-slider>
-            <input ng-hide="$mdMedia('sm')||$mdMedia('xs')"
-                   type="number"
-                   ng-model="numberOfColor"
-                   flex="15"
-                   ng-change="numberChange(numberOfColor)"
-                   required>
         </md-input-container>
-        <div class="preview-block"
-             ng-show="formShow">
-            <md-toolbar layout-gt-sm="row"
-                        layout-sm="column"
-                        class="md-primary md-hue-2"
-                        flex="100">
-                <div layout-align="start center"
-                     layout="row"
-                     flex>
-                    <md-button ng-click="fit()"
-                               ng-disabled="picFile.progress >= 0">
-                        FIT
-                    </md-button>
-                    <md-button ng-click="zoomIn()"
-                               ng-disabled="picFile.progress >= 0">
-                        <i class="material-icons button-icon">zoom_in</i>
-                    </md-button>
-                    <md-button ng-click="zoomOut()"
-                               ng-disabled="picFile.progress >= 0">
-                        <i class="material-icons button-icon">zoom_out</i>
-                    </md-button>
-                </div>
-                <div layout-align="center center"
-                     layout="row"
-                     flex>
-                    <span class="progress"
-                          ng-show="picFile.progress >= 0 && !imageResult">
-                        <div style="width:{{picFile.progress}}%"
-                             ng-bind="picFile.progress + '%'"
-                             class="ng-binding">
-                        </div>
-                    </span>
-                    <!--span show when upload hove been starting and response don't get yet-->
-                </div>
-                <div layout-align="end center"
-                     layout="row"
-                     flex>
-                    <md-button class="md-raised md-primary convert-button"
-                               ng-disabled="!uploadForm.$valid"
-                               ng-click="uploadPic(picFile)">
-                        Convert
-                    </md-button>
-                </div>
-            </md-toolbar>
-            <div class="image-container">
-                <img ngf-src="picFile"
-                     class="thumb imagePreview"
-                     id="picFile"
-                     image-processing
-                     image-on-load="imageLoaded(result)"
-                     zoom-in
-                     zoom-out
-                     fit>
-            </div>
-        </div>
-        <div ng-class="{'invalid': uploadForm.file.$error.maxSize}"
-             ng-hide="formShow">
-            <input type="file"
-                   ngf-select=""
-                   ng-model="picFile"
-                   name="file"
-                   ngf-accept="'image/*'"
-                   ngf-max-size="2MB"
-                   required="">
-            <span ng-show="uploadForm.file.$error.maxSize">
-                More then 2 MB. Please select other file
-            </span>
-        </div>
 
-    </form>
-    <div class="preview-block"
-         ng-show="imageResult">
-        <md-toolbar layout-gt-sm="row"
-                    layout-sm="column"
-                    class="md-primary md-hue-2"
-                    flex="100">
-            <div layout-align="start center"
-                 layout="row"
-                 flex>
-                <md-button ng-click="fit()">
-                    FIT
-                </md-button>
-                <md-button ng-click="zoomIn()">
-                    <i class="material-icons button-icon">zoom_in</i>
-                </md-button>
-                <md-button ng-click="zoomOut()">
-                    <i class="material-icons button-icon">zoom_out</i>
-                </md-button>
+        <div class="image-container"
+                layout="row"
+                layout-align="center center">
+            <div class="preview-container"
+                 flex="50"
+                 layout-align="center center">
+                <img ngf-src="picFile"
+                 class="thumb imagePreview"
+                 id="picFile"
+                 image-processing
+                 image-on-load="imageLoaded(result)">
             </div>
-            <div layout-align="end center"
-                 layout="row"
-                 flex>
-                <md-button class="md-raised md-primary convert-button"
-                           ng-disabled="!uploadForm.$valid"
-                           ng-click=""
-                           id="">
-                    Save
-                </md-button>
-            </div>
-        </md-toolbar>
-        <div class="image-container">
-            <img ng-if="imageResult"
+           <div class="preview-container"
+                flex="50">
+               <img ng-show="imageResult"
+                 id="imageResult"
                  ng-src="/public/images/temp_convert/{{imageResultUrl}}"
                  class="thumb imagePreview"
                  zoom-in
                  zoom-out
                  fit>
+           </div>
         </div>
-    </div>
+    </form>
+
 
 </div>
