--- a/client/scss/_upload.scss
+++ b/client/scss/_upload.scss
@@ -49,6 +49,9 @@ form .progress {
 //}
 //
 .preview-container {
+  align-items: center;
+  justify-content: center;
+  display: flex;
   overflow: auto;
   height: 400px;
 }
@@ -57,6 +60,24 @@ form .progress {
   @media screen and (max-width: $mediumScreen) {
     width: 100%;
   }
+}
+
+.border {
+  border:1px solid $primaryColor;
+}
+
+.listOfColor {
+  display: inline-block;
+}
+
+.colorCircle {
+  width: 24px;
+  height: 24px;
+  border-radius: 12px;
+}
+
+.dialog {
+  width:80%
 }
 
 
