--- a/client/template/upload.html
+++ b/client/template/upload.html
@@ -13,7 +13,8 @@
      layout-wrap
      flex="100">
     <form name="uploadForm"
-          flex="100">
+          flex="100"
+          ng-class="{border: imageResult}">
 
         <div ng-class="{'invalid': uploadForm.file.$error.maxSize}"
              ng-hide="formShow">
@@ -66,26 +67,36 @@
                 <!--span show when upload hove been starting and response don't get yet-->
             </div>
             <div layout-align="end center"
-                 layout="row"
+                 layout-gt-xs="row"
+                 layout-xs="column"
                  flex>
                 <md-button class="md-raised md-primary convert-button"
-                           ng-disabled="!uploadForm.$valid"
                            ng-click="uploadPic(picFile)"
                            ng-show="!imageResult">
                     Convert
                 </md-button>
                 <md-button class="md-raised md-primary"
+                           ng-click="showConfirm($event)"
+                           ng-show="imageResult"
+                           flex-sm="33"
+                           flex-xs="100">
+                    Color
+                </md-button>
+                <md-button class="md-raised md-primary"
                            ng-click=""
                            ng-show="imageResult"
-                        flex-sm="50">
+                           flex-sm="33"
+                           flex-xs="50">
                     SAVE
                 </md-button>
                 <md-button class="md-raised md-primary"
                            ng-click="notLike()"
                            ng-show="imageResult"
-                           flex-sm="50">
+                           flex-sm="33"
+                           flex-xs="50">
                     Don't like
                 </md-button>
+
             </div>
         </md-toolbar>
 
@@ -118,14 +129,14 @@
                             layout-margin
                             class="input-container">
             <div flex="100">
-                <p>Number of color: {{numberOfColor}}</p>
+                <p>Number of color: {{imageParams.numberOfColor}}</p>
             </div>
             <label></label>
             <md-slider min="5"
                        flex-gt-sm="80"
                        flex-sm="100"
                        max="200"
-                       ng-model="numberOfColor"
+                       ng-model="imageParams.numberOfColor"
                        step="5"
                        id="color-slider"
                        class="md-primary"
@@ -134,29 +145,43 @@
         </md-input-container>
 
         <div class="image-container"
-                layout="row"
-                layout-align="center center">
+             layout-gt-xs="row"
+             layout-xs="column"
+             layout-align="center center">
             <div class="preview-container"
-                 flex="50"
+                 flex-gt-xs="50"
+                 flex-xs="100"
+                 flex-order="1"
+                 flex-order-xs="2"
                  layout-align="center center">
                 <img ngf-src="picFile"
-                 class="thumb imagePreview"
-                 id="picFile"
-                 image-processing
-                 image-on-load="imageLoaded(result)">
+                     class="thumb imagePreview"
+                     id="picFile"
+                     image-processing
+                     image-on-load="imageLoaded(result)">
             </div>
-           <div class="preview-container"
-                flex="50">
-               <img ng-show="imageResult"
-                 id="imageResult"
-                 ng-src="/public/images/temp_convert/{{imageResultUrl}}"
-                 class="thumb imagePreview"
-                 zoom-in
-                 zoom-out
-                 fit>
-           </div>
+            <div class="preview-container"
+                 flex-gt-xs="50"
+                 flex-xs="100"
+                 flex-order="2"
+                 flex-order-xs="1">
+                <img ng-show="imageResult"
+                     id="imageResult"
+                     ng-src="/public/images/temp_convert/{{imageResultUrl}}"
+                     class="thumb imagePreview"
+                     zoom-in
+                     zoom-out
+                     fit>
+            </div>
         </div>
     </form>
+
+
+
+
+
+
+
 
 
 </div>
