--- a/client/template/colorList.html
+++ b/client/template/colorList.html
@@ -13,47 +13,7 @@
             <div class="md-dialog-content"
                  layout="column"
                  flex="100">
-                <div class="dialog-list-container"
-                     layout="row"
-                     layout-padding
-                     flex="100">
-                    <div class="dialog-list-color"
-                         flex
-                         layout-align="center center">
-                        Color
-                    </div>
-                    <div class="dialog-list-number"
-                         flex
-                         layout-align="center center">
-                        Number
-                    </div>
-                    <div class="dialog-list-name"
-                         flex
-                            layout-align="center center">
-                        Name
-                    </div>
-                </div>
-                <div class="dialog-list-container"
-                     layout="row"
-                     layout-padding
-                     flex="100"
-                     ng-repeat="color in listOfColors">
-                    <div  layout-align="start center"
-                          style="width: 36px;">
-                        <div class="colorCircle dialog-list-color"
-                         ng-style="{'background-color': color.color}"></div>
-                    </div>
-                    <div  layout-align="center center"
-                          style="width: 60px;"
-                          class="dialog-list-number">
-                        {{color.dmccode}}
-                    </div>
-                    <div  flex
-                          layout-align="center center"
-                          class="dialog-list-name">
-                        {{color.name}}
-                    </div>
-                </div>
+                <list-of-color></list-of-color>
             </div>
         </md-dialog-content>
         <md-dialog-actions layout="row">
