--- a/client/template/freePattern.html
+++ b/client/template/freePattern.html
@@ -22,7 +22,7 @@
         </md-whiteframe>
         <md-button class="md-raised md-primary full-button"
                    ui-sref="app.patternForFree({id: pattern})">
-            Look at
+            Preview
         </md-button>
     </md-whiteframe>
 
