--- a/client/template/register.html
+++ b/client/template/register.html
@@ -15,7 +15,7 @@
                  flex="100">
                 <md-input-container>
                     <label>login</label>
-                    <input ng-model="user.login" type="text" required>
+                    <input ng-model="user.username" type="text" required>
                 </md-input-container>
                 <md-input-container>
                     <label>E-mail</label>
