--- a/client/template/login.html
+++ b/client/template/login.html
@@ -19,7 +19,7 @@
                 </md-input-container>
                 <md-input-container>
                     <label>Password</label>
-                    <input ng-model="user.password" type="text" required>
+                    <input ng-model="user.password" type="password" required>
                 </md-input-container>
             </div>
         </md-dialog-content>
