--- a/client/template/register.html
+++ b/client/template/register.html
@@ -23,14 +23,14 @@
                 </md-input-container>
                 <md-input-container>
                     <label>Password</label>
-                    <input ng-model="user.password" type="text">
+                    <input ng-model="user.password" type="password">
                 </md-input-container>
 
             </div>
         </md-dialog-content>
         <md-dialog-actions layout="row">
             <span flex></span>
-            <md-button ng-click="registration(user)">
+            <md-button ng-click="login(user)">
                 Registration
             </md-button>
             <md-button ng-click="cancel()">
