Create image model. Save image to te server for login user. POST and DELETE image. Get list of saved images

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -133,4 +133,9 @@ form .progress {
   image-rendering: pixelated;
 }
 
+.heightAuto {
+  height: auto;
+  padding-bottom: 0;
+}
+
 /*# sourceMappingURL=main.css.map */
