--- a/client/template/upload.html
+++ b/client/template/upload.html
@@ -86,10 +86,10 @@
                     Color
                 </md-button>
                 <md-button class="md-raised md-primary"
-                           ng-click=""
                            ng-show="imageResult"
                            flex-sm="33"
-                           flex-xs="50">
+                           flex-xs="50"
+                           ng-click="save()">
                     SAVE
                 </md-button>
                 <md-button class="md-raised md-primary"
