--- a/client/template/pattern.html
+++ b/client/template/pattern.html
@@ -47,7 +47,7 @@
             </md-button>
         </md-toolbar>
         <md-content style="max-height: 70vh;">
-            <img ng-src="/public/freePattern/{{id}}.gif"
+            <img ng-src="{{address}}{{id}}{{extension}}"
                  class="thumb imagePreview"
                  zoom-in
                  zoom-out
