--- a/Ionic/EP/www/templates/freePattern.html
+++ b/Ionic/EP/www/templates/freePattern.html
@@ -8,14 +8,17 @@
 
       <div class="card"
            ng-repeat="pattern in listOfPatterns">
-        <div class="patternContainer">
-          <img class="patternImage"
-               ng-src="{{baseURL}}/public/freePattern/!{{pattern}}.jpg">
-        </div>
-        <button class="full-button"
-                ui-sref="app.patternForFree({id: pattern})">
-          Preview
-        </button>
+          <div class="item item-image">
+            <img class="patternImage"
+                 ng-src="{{baseURL}}/public/freePattern/!{{pattern}}.jpg">
+          </div>
+          <div class="item item-divider">
+            <button class="button button-full primary"
+              ui-sref="app.patternForFree({id: pattern})">
+              Preview
+            </button>
+          </div>
+
       </div>
 
     </div>
